完善登录示例以及swagger文档
