# app/request/swagger/login.go
@@ -1,0 +1,6 @@
+package swagger
+
+type Login struct {
+	Username string `json:"username" validate:"required" label:"用户名"`
+	Password string `json:"password" validate:"required" label:"密码"`
+}
